fix: nav visibility

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -9,6 +9,7 @@
     position: fixed;
     top: 45px;
     transition: all .5s;
+    visibility: hidden;
     width: 275px;
 }
 
